--- a/DBReview/4. AVR Guest Experience PROD.ipynb
+++ b/DBReview/4. AVR Guest Experience PROD.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apex - PROD"
+    "# Account - AVR Guest Experience PROD"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Account Summary"
+    "## Database Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -31,9 +31,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mAccount  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
-      "\u001b[32;1m-------  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
-      "Apex-PROD 463854377715 eu-west-2            0              8\n",
+      "\u001b[32;1mAccount                  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
+      "\u001b[32;1m-------                  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
+      "AVR-Guest-Experience-PROD 957578851978 eu-west-2            1              2\n",
       "\n"
      ]
     }
@@ -43,19 +43,20 @@
     "Import-Module AWS.Tools.DynamoDBv2\n",
     "Import-Module AWS.Tools.RDS\n",
     "\n",
-    "$RegexGroup             = 'AccountNumber'\n",
-    "$RegexGroupAccountName  = 'AccountName'\n",
-    "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
-    "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
-    "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Apex-PROD' }\n",
-    "$Regions                = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
+    "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-AVR-Guest-Experience-PROD' }\n",
+    "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
     "\n",
     "function Get-AWSDBInformation {\n",
     "    [CmdletBinding()]\n",
     "    param (\n",
+    "\n",
     "        $Profiles,\n",
-    "        $Regions\n",
+    "        $Regions,\n",
+    "        $RegexGroup             = 'AccountNumber',\n",
+    "        $RegexGroupAccountName  = 'AccountName',\n",
+    "        $RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\",\n",
+    "        $RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\", \n",
+    "        $RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
     "    )\n",
     "    \n",
     "    begin {\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -152,16 +153,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mRegion   \u001b[0m\u001b[32;1m TableName                 \u001b[0m\u001b[32;1m Backup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m SizeMB  \u001b[0m\u001b[32;1m Status\u001b[0m\n",
-      "\u001b[32;1m------   \u001b[0m \u001b[32;1m---------                 \u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m------  \u001b[0m \u001b[32;1m------\u001b[0m\n",
-      "eu-west-2 prod-accommodation          False 10/20/2023 1:11:55 PM    151626 28 MB    ACTIVE\n",
-      "eu-west-2 prod-apex_product_extras    False 2/2/2023 4:43:28 PM     5072420 993 MB   ACTIVE\n",
-      "eu-west-2 prod-apex_translations       True 5/16/2024 10:06:42 AM      7743 1 MB     ACTIVE\n",
-      "eu-west-2 prod-availability           False 10/20/2023 1:11:55 PM   3886095 2619 MB  ACTIVE\n",
-      "eu-west-2 prod-bookability            False 10/20/2023 1:11:55 PM 117212965 31114 MB ACTIVE\n",
-      "eu-west-2 prod-novasol_currencies     False 2/2/2023 4:43:28 PM          38 0 MB     ACTIVE\n",
-      "eu-west-2 prod-novasol_product_cache  False 10/20/2023 1:11:55 PM    213460 195 MB   ACTIVE\n",
-      "eu-west-2 terraform-locks              True 7/8/2022 6:20:39 PM          89 0 MB     ACTIVE\n",
+      "\u001b[32;1mRegion   \u001b[0m\u001b[32;1m TableName      \u001b[0m\u001b[32;1m Backup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m SizeMB\u001b[0m\u001b[32;1m Status\u001b[0m\n",
+      "\u001b[32;1m------   \u001b[0m \u001b[32;1m---------      \u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m------\u001b[0m\n",
+      "eu-west-2 terraform-lock   False 3/16/2021 2:55:01 PM         49 0 MB   ACTIVE\n",
+      "eu-west-2 terraform-locks  False 10/19/2021 1:14:49 PM        68 0 MB   ACTIVE\n",
       "\n"
      ]
     }
@@ -216,12 +211,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Backups"
+    "### RDS Instances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -236,25 +231,80 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
-      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
-      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP  7/12/2024 11:30:17 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP2 7/12/2024 11:36:29 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP3 7/13/2024 7:19:00 PM   AVAILABLE\n",
+      "\u001b[32;1mDBInstanceIdentifier\u001b[0m\u001b[32;1m Engine \u001b[0m\u001b[32;1m EngineVersion\u001b[0m\u001b[32;1m InstanceCreateTime  \u001b[0m\u001b[32;1m BackupRetention\u001b[0m\u001b[32;1m Snapshots\u001b[0m\n",
+      "\u001b[32;1m--------------------\u001b[0m \u001b[32;1m------ \u001b[0m \u001b[32;1m-------------\u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m---------------\u001b[0m \u001b[32;1m---------\u001b[0m\n",
+      "places-api           mariadb 10.6.16       4/11/2023 3:36:31 PM               7         9\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "$BackupsList    = Get-DDBBackupList -ProfileName $Profiles.ProfileName \n",
-    "$Columns      = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
-    "$BackupsList | Select-Object -Property $Columns | Format-Table -AutoSize"
+    "$RDSInstances = Get-RDSDBInstance -ProfileName $Profiles.ProfileName -Region eu-west-2\n",
+    "\n",
+    "$Inst = @()\n",
+    "$Snap = @()\n",
+    "$Snapshots = @()\n",
+    "foreach ($Instance in $RDSInstances) {\n",
+    "    \n",
+    "    $DBInstanceArn      = $Instance.DBInstanceArn\n",
+    "    # $Tags               = Get-RDSTagForResource -ResourceName $DBInstanceArn -ProfileName $Profile.ProfileName\n",
+    "    $Shots          = Get-RDSDBSnapshot -ProfileName $Profiles.ProfileName -DBInstanceIdentifier $DBInstanceArn\n",
+    "    #$DBClusterSnapshots = Get-RDSDBClusterSnapshot -ProfileName $Profile.ProfileName -DBClusterIdentifier $DBInstanceArn\n",
+    "\n",
+    "    $Sum = [PSCustomObject]@{\n",
+    "\n",
+    "        #DBName                  = $Instance.DBName\n",
+    "        DBInstanceIdentifier    = $Instance.DBInstanceIdentifier\n",
+    "        Engine                  = $Instance.Engine\n",
+    "        EngineVersion           = $Instance.EngineVersion\n",
+    "        InstanceCreateTime      = $Instance.InstanceCreateTime\n",
+    "        #DBInstanceClass         = $Instance.DBInstanceClass\n",
+    "        BackupRetention         = $Instance.BackupRetentionPeriod\n",
+    "        #StorageThroughput       = $Instance.StorageThroughput\n",
+    "        #Tags                    = $Tags\n",
+    "        Snapshots               = ($Shots | Measure-Object).Count\n",
+    "        #DBClusterSnapshots      = ($DBClusterSnapshots | Measure-Object).Count\n",
+    "        \n",
+    "    }\n",
+    "    $Inst += $Sum\n",
+    "    $Snapshots += $Shots\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "$Snapshots | ForEach-Object {\n",
+    "\n",
+    "    $Sum = [PSCustomObject]@{\n",
+    "\n",
+    "        DBInstanceIdentifier    = $_.DBInstanceIdentifier\n",
+    "        DBSnapshotIdentifier    = $_.DBSnapshotIdentifier\n",
+    "        SnapshotCreateTime      = $_.SnapshotCreateTime\n",
+    "        Engine                  = $_.Engine\n",
+    "        SnapshotType            = $_.SnapshotType\n",
+    "        Status                  = $_.Status\n",
+    "        \n",
+    "    }\n",
+    "    $Snap += $Sum\n",
+    "}\n",
+    "$Inst | Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Snapshots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### places-api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -269,55 +319,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mCREATING\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
+      "\u001b[32;1mDBSnapshotIdentifier           \u001b[0m\u001b[32;1m SnapshotCreateTime  \u001b[0m\u001b[32;1m SnapshotType\u001b[0m\u001b[32;1m Status\u001b[0m\n",
+      "\u001b[32;1m--------------------           \u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m------\u001b[0m\n",
+      "rds:places-api-2024-07-13-03-12 7/13/2024 4:12:54 AM automated    available\n",
+      "rds:places-api-2024-07-12-03-13 7/12/2024 4:14:01 AM automated    available\n",
+      "rds:places-api-2024-07-11-03-12 7/11/2024 4:12:36 AM automated    available\n",
+      "rds:places-api-2024-07-10-03-12 7/10/2024 4:12:53 AM automated    available\n",
+      "rds:places-api-2024-07-09-03-14 7/9/2024 4:14:26 AM  automated    available\n",
+      "rds:places-api-2024-07-08-03-13 7/8/2024 4:13:36 AM  automated    available\n",
+      "rds:places-api-2024-07-07-03-13 7/7/2024 4:13:19 AM  automated    available\n",
+      "rds:places-api-2024-07-06-03-12 7/6/2024 4:12:57 AM  automated    available\n",
+      "rds:places-api-2024-07-05-03-16 7/5/2024 4:16:41 AM  automated    available\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "$Backup = New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP3'\n",
-    "$Backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mAVAILABLE\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "$Bk = Get-DDBBackup -BackupArn $Backup.BackupArn -ProfileName DevOps-Apex-PROD\n",
-    "$Bk.BackupDetails"
+    "$DB = 'places-api'\n",
+    "$Snap | Where-Object {$_.DBInstanceIdentifier -eq $DB} | Select-Object DBSnapshotIdentifier, SnapshotCreateTime, SnapshotType, Status |\n",
+    "Sort-Object SnapshotCreateTime -Descending  |Format-Table -AutoSize"
    ]
   }
  ],
