--- a/DBReview/5. AVR Guest Payments PROD.ipynb
+++ b/DBReview/5. AVR Guest Payments PROD.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apex - PROD"
+    "# Account - AVR Guest Payments PROD"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Account Summary"
+    "## Database Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -31,9 +31,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mAccount  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
-      "\u001b[32;1m-------  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
-      "Apex-PROD 463854377715 eu-west-2            0              8\n",
+      "\u001b[32;1mAccount                \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region      \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
+      "\u001b[32;1m-------                \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------      \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
+      "AVR-Guest-Payments-PROD 461191266857 eu-central-1            0              1\n",
+      "AVR-Guest-Payments-PROD 461191266857 eu-west-2               0              5\n",
       "\n"
      ]
     }
@@ -43,19 +44,20 @@
     "Import-Module AWS.Tools.DynamoDBv2\n",
     "Import-Module AWS.Tools.RDS\n",
     "\n",
-    "$RegexGroup             = 'AccountNumber'\n",
-    "$RegexGroupAccountName  = 'AccountName'\n",
-    "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
-    "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
-    "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Apex-PROD' }\n",
-    "$Regions                = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
+    "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-AVR-Guest-Payments-PROD' }\n",
+    "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
     "\n",
     "function Get-AWSDBInformation {\n",
     "    [CmdletBinding()]\n",
     "    param (\n",
+    "\n",
     "        $Profiles,\n",
-    "        $Regions\n",
+    "        $Regions,\n",
+    "        $RegexGroup             = 'AccountNumber',\n",
+    "        $RegexGroupAccountName  = 'AccountName',\n",
+    "        $RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\",\n",
+    "        $RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\", \n",
+    "        $RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
     "    )\n",
     "    \n",
     "    begin {\n",
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -152,16 +154,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mRegion   \u001b[0m\u001b[32;1m TableName                 \u001b[0m\u001b[32;1m Backup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m SizeMB  \u001b[0m\u001b[32;1m Status\u001b[0m\n",
-      "\u001b[32;1m------   \u001b[0m \u001b[32;1m---------                 \u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m------  \u001b[0m \u001b[32;1m------\u001b[0m\n",
-      "eu-west-2 prod-accommodation          False 10/20/2023 1:11:55 PM    151626 28 MB    ACTIVE\n",
-      "eu-west-2 prod-apex_product_extras    False 2/2/2023 4:43:28 PM     5072420 993 MB   ACTIVE\n",
-      "eu-west-2 prod-apex_translations       True 5/16/2024 10:06:42 AM      7743 1 MB     ACTIVE\n",
-      "eu-west-2 prod-availability           False 10/20/2023 1:11:55 PM   3886095 2619 MB  ACTIVE\n",
-      "eu-west-2 prod-bookability            False 10/20/2023 1:11:55 PM 117212965 31114 MB ACTIVE\n",
-      "eu-west-2 prod-novasol_currencies     False 2/2/2023 4:43:28 PM          38 0 MB     ACTIVE\n",
-      "eu-west-2 prod-novasol_product_cache  False 10/20/2023 1:11:55 PM    213460 195 MB   ACTIVE\n",
-      "eu-west-2 terraform-locks              True 7/8/2022 6:20:39 PM          89 0 MB     ACTIVE\n",
+      "\u001b[32;1mRegion      \u001b[0m\u001b[32;1m TableName                           \u001b[0m\u001b[32;1m Backup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m SizeMB \u001b[0m\u001b[32;1m St\u001b[0m\n",
+      "\u001b[32;1m            \u001b[0m\u001b[32;1m                                     \u001b[0m\u001b[32;1m       \u001b[0m\u001b[32;1m                      \u001b[0m\u001b[32;1m          \u001b[0m\u001b[32;1m        \u001b[0m\u001b[32;1m at\u001b[0m\n",
+      "\u001b[32;1m            \u001b[0m\u001b[32;1m                                     \u001b[0m\u001b[32;1m       \u001b[0m\u001b[32;1m                      \u001b[0m\u001b[32;1m          \u001b[0m\u001b[32;1m        \u001b[0m\u001b[32;1m us\u001b[0m\n",
+      "\u001b[32;1m------      \u001b[0m \u001b[32;1m---------                           \u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m------ \u001b[0m \u001b[32;1m--\u001b[0m\n",
+      "eu-central-1 transaction                           False 1/29/2021 6:01:02 PM          8 0 MB    A…\n",
+      "eu-west-2    instalment-plans-payment-instalments  False 6/9/2023 11:17:17 AM     244029 76 MB   A…\n",
+      "eu-west-2    scheduled-payments                    False 5/24/2022 11:59:53 AM      2881 0 MB    A…\n",
+      "eu-west-2    terraform-locks                       False 10/7/2021 8:08:07 AM         27 0 MB    A…\n",
+      "eu-west-2    transaction                           False 4/28/2021 11:30:47 AM   5394241 4735 MB A…\n",
+      "eu-west-2    vt-payment-links                      False 7/12/2022 12:51:42 PM    505932 63 MB   A…\n",
       "\n"
      ]
     }
@@ -210,114 +212,6 @@
     "\n",
     "}\n",
     "$ddbTables | Format-Table -AutoSize"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Backups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
-      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
-      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP  7/12/2024 11:30:17 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP2 7/12/2024 11:36:29 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP3 7/13/2024 7:19:00 PM   AVAILABLE\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "$BackupsList    = Get-DDBBackupList -ProfileName $Profiles.ProfileName \n",
-    "$Columns      = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
-    "$BackupsList | Select-Object -Property $Columns | Format-Table -AutoSize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mCREATING\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "$Backup = New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP3'\n",
-    "$Backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mAVAILABLE\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "$Bk = Get-DDBBackup -BackupArn $Backup.BackupArn -ProfileName DevOps-Apex-PROD\n",
-    "$Bk.BackupDetails"
    ]
   }
  ],
