--- a/DBReview/1. Summary.ipynb
+++ b/DBReview/1. Summary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -45,97 +45,19 @@
     }
    ],
    "source": [
+    "Remove-Module DevOpsToolkit\n",
     "Import-Module AWS.Tools.Common\n",
     "Import-Module AWS.Tools.DynamoDBv2\n",
     "Import-Module AWS.Tools.RDS\n",
-    "\n",
+    "Import-Module '/Users/conrad.gauntlett/WorkArea/Repos/DBA_MISC/PowerShell/Modules/DevOpsToolkit'\n",
     "\n",
     "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -like 'DevOps*' }\n",
-    "$Profiles\n",
-    "\n",
-    "function Get-AWSDBInformation {\n",
-    "    [CmdletBinding()]\n",
-    "    param (\n",
-    "\n",
-    "        $Profiles,\n",
-    "        $Regions,\n",
-    "        $RegexGroup             = 'AccountNumber',\n",
-    "        $RegexGroupAccountName  = 'AccountName',\n",
-    "        $RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\",\n",
-    "        $RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" ,\n",
-    "        $RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "    )\n",
-    "    \n",
-    "    begin {\n",
-    "\n",
-    "        $Summary    = @()\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    process {\n",
-    "\n",
-    "        $Summary    = @()\n",
-    "        foreach ($Profile in $Profiles) {\n",
-    "\n",
-    "            foreach ($Region in $Regions) {\n",
-    "                \n",
-    "                $RDSInstances   = Get-RDSDBInstance -ProfileName $Profile.ProfileName -Region $Region\n",
-    "                $ddbTables      = Get-DDBTableList -ProfileName $Profile.ProfileName -Region $Region\n",
-    "\n",
-    "                switch ([string]::IsNullOrEmpty($RDSInstances)) {\n",
-    "                    $true { \n",
-    "                        if ($ddbTables) {\n",
-    "                            \n",
-    "                            $Table = $ddbTables | Select-Object -First 1\n",
-    "                            $ddbTable = Get-DDBTable -TableName $Table -ProfileName $Profile.ProfileName -Region $Region\n",
-    "                            $AccountID  = (($ddbTable.TableArn | Select-String -Pattern $RegexAccountNumberDDb).Matches.Groups | Where-Object { $_.Name -eq $RegexGroup }).Value\n",
-    "                        }else {\n",
-    "\n",
-    "                            $AccountID = 0\n",
-    "                        }\n",
-    "                    }\n",
-    "                    $false {\n",
-    "\n",
-    "                        $RDSInstance   = $RDSInstances | Select-Object -First 1\n",
-    "                        $AccountID  = (($RDSInstance.DBInstanceArn | Select-String -Pattern $RegexAccountNumber).Matches.Groups | Where-Object { $_.Name -eq $RegexGroup }).Value\n",
-    "                    }\n",
-    "                    default {\n",
-    "\n",
-    "                        $AccountID = 0\n",
-    "                    }\n",
-    "                }\n",
-    "\n",
-    "                $Sum = [PSCustomObject]@{\n",
-    "\n",
-    "                    Account             = (($Profile.ProfileName | select-string -Pattern $RegexAccountName).Matches.Groups | Where-Object { $_.Name -eq $RegexGroupAccountName }).Value\n",
-    "                    AccountID           = $AccountID\n",
-    "                    Region              = $Region\n",
-    "                    RDSInstances        = ($RDSInstances.DBInstanceIdentifier | Measure-Object).Count\n",
-    "                    DynamoDBTables      = $ddbTables.Count\n",
-    "                    \n",
-    "                }\n",
-    "\n",
-    "                $condition = $Sum.RDSInstances + $Sum.DynamoDBTables\n",
-    "                if ($condition -gt 0) {\n",
-    "                    $Summary += $Sum\n",
-    "                }\n",
-    "            }\n",
-    "\n",
-    "        }\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    end {\n",
-    "\n",
-    "        $Summary\n",
-    "        \n",
-    "    }\n",
-    "}"
+    "$Profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -144,10 +66,36 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mAccount                  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region      \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
+      "\u001b[32;1m-------                  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------      \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
+      "Apex-PROD                 463854377715 eu-west-2               0              8\n",
+      "Owner-DK-Prod             619122104288 eu-west-2               0              1\n",
+      "Owner-Services-PROD       496175963148 eu-west-2               3              1\n",
+      "AVR-Guest-Experience-PROD 957578851978 eu-west-2               1              2\n",
+      "AVR-Guest-Payments-PROD   461191266857 eu-central-1            0              1\n",
+      "AVR-Guest-Payments-PROD   461191266857 eu-west-2               0              5\n",
+      "AGE-Checkout-PROD         004796833142 eu-west-2               0              3\n",
+      "AVR-PostBook-PROD         125329075900 eu-west-2               0              2\n",
+      "AVR-Pricing-PROD          771654826489 eu-west-2               6              3\n",
+      "Novosol-Awaze-PROD        997644474777 eu-central-1            0              1\n",
+      "Novosol-Core-PROD         579597753614 eu-west-2               0              1\n",
+      "Novosol-PROD              035637376366 eu-central-1            4              1\n",
+      "Novosol-PROD              035637376366 eu-west-2               1              0\n",
+      "OCMA-PROD                 094848768475 eu-west-2               0              1\n",
+      "OneConnect-PROD           822029231144 eu-west-2               0              7\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
-    "$Summary    = Get-AWSDBInformation $Profiles $Regions\n",
+    "$Summary    = Get-DoAWSDBInformation $Profiles $Regions\n",
     "$Summary    | Format-Table -AutoSize\n",
     "# $Summary    | export-csv -Path '/Users/conrad.gauntlett/WorkArea/Temp/AWSDBInformation.csv' -NoTypeInformation -Force"
    ]
