--- a/DBReview/2. Apex PROD.ipynb
+++ b/DBReview/2. Apex PROD.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -36,95 +36,23 @@
       "Apex-PROD 463854377715 eu-west-2            0              8\n",
       "\n"
      ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Command failed: SubmitCode: Import-Module AWS.Tools.Common, AWS.Tools.DynamoDB ...",
+     "output_type": "error",
+     "traceback": [
+      "Command failed: SubmitCode: Import-Module AWS.Tools.Common, AWS.Tools.DynamoDB ..."
+     ]
     }
    ],
    "source": [
-    "Import-Module AWS.Tools.Common\n",
-    "Import-Module AWS.Tools.DynamoDBv2\n",
-    "Import-Module AWS.Tools.RDS\n",
+    "Import-Module AWS.Tools.Common, AWS.Tools.DynamoDBv2, AWS.Tools.RDS\n",
+    "Import-Module '/Users/conrad.gauntlett/WorkArea/Repos/DBA_MISC/PowerShell/Modules/DevOpsToolkit'\n",
     "\n",
-    "$RegexGroup             = 'AccountNumber'\n",
-    "$RegexGroupAccountName  = 'AccountName'\n",
-    "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
-    "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
-    "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Apex-PROD' }\n",
-    "$Regions                = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
-    "\n",
-    "function Get-AWSDBInformation {\n",
-    "    [CmdletBinding()]\n",
-    "    param (\n",
-    "        $Profiles,\n",
-    "        $Regions\n",
-    "    )\n",
-    "    \n",
-    "    begin {\n",
-    "\n",
-    "        $Summary    = @()\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    process {\n",
-    "\n",
-    "        $Summary    = @()\n",
-    "        foreach ($Profile in $Profiles) {\n",
-    "\n",
-    "            foreach ($Region in $Regions) {\n",
-    "                \n",
-    "                $RDSInstances   = Get-RDSDBInstance -ProfileName $Profile.ProfileName -Region $Region\n",
-    "                $ddbTables      = Get-DDBTableList -ProfileName $Profile.ProfileName -Region $Region\n",
-    "\n",
-    "                switch ([string]::IsNullOrEmpty($RDSInstances)) {\n",
-    "                    $true { \n",
-    "                        if ($ddbTables) {\n",
-    "                            \n",
-    "                            $Table = $ddbTables | Select-Object -First 1\n",
-    "                            $ddbTable = Get-DDBTable -TableName $Table -ProfileName $Profile.ProfileName -Region $Region\n",
-    "                            $AccountID  = (($ddbTable.TableArn | Select-String -Pattern $RegexAccountNumberDDb).Matches.Groups | Where-Object { $_.Name -eq $RegexGroup }).Value\n",
-    "                        }else {\n",
-    "\n",
-    "                            $AccountID = 0\n",
-    "                        }\n",
-    "                    }\n",
-    "                    $false {\n",
-    "\n",
-    "                        $RDSInstance   = $RDSInstances | Select-Object -First 1\n",
-    "                        $AccountID  = (($RDSInstance.DBInstanceArn | Select-String -Pattern $RegexAccountNumber).Matches.Groups | Where-Object { $_.Name -eq $RegexGroup }).Value\n",
-    "                    }\n",
-    "                    default {\n",
-    "\n",
-    "                        $AccountID = 0\n",
-    "                    }\n",
-    "                }\n",
-    "\n",
-    "                $Sum = [PSCustomObject]@{\n",
-    "\n",
-    "                    Account             = (($Profile.ProfileName | select-string -Pattern $RegexAccountName).Matches.Groups | Where-Object { $_.Name -eq $RegexGroupAccountName }).Value\n",
-    "                    AccountID           = $AccountID\n",
-    "                    Region              = $Region\n",
-    "                    RDSInstances        = ($RDSInstances.DBInstanceIdentifier | Measure-Object).Count\n",
-    "                    DynamoDBTables      = $ddbTables.Count\n",
-    "                    \n",
-    "                }\n",
-    "\n",
-    "                $condition = $Sum.RDSInstances + $Sum.DynamoDBTables\n",
-    "                if ($condition -gt 0) {\n",
-    "                    $Summary += $Sum\n",
-    "                }\n",
-    "            }\n",
-    "\n",
-    "        }\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    end {\n",
-    "\n",
-    "        $Summary\n",
-    "        \n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "$Summary    = Get-AWSDBInformation $Profiles $Regions\n",
+    "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Apex-PROD' }\n",
+    "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
+    "$Summary    = Get-DoAWSDBInformation $Profiles $Regions\n",
     "$Summary    | Format-Table -AutoSize"
    ]
   },
@@ -137,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -146,69 +74,9 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mRegion   \u001b[0m\u001b[32;1m TableName                 \u001b[0m\u001b[32;1m Backup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m SizeMB  \u001b[0m\u001b[32;1m Status\u001b[0m\n",
-      "\u001b[32;1m------   \u001b[0m \u001b[32;1m---------                 \u001b[0m \u001b[32;1m------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m------  \u001b[0m \u001b[32;1m------\u001b[0m\n",
-      "eu-west-2 prod-accommodation          False 10/20/2023 1:11:55 PM    151626 28 MB    ACTIVE\n",
-      "eu-west-2 prod-apex_product_extras    False 2/2/2023 4:43:28 PM     5072420 993 MB   ACTIVE\n",
-      "eu-west-2 prod-apex_translations       True 5/16/2024 10:06:42 AM      7743 1 MB     ACTIVE\n",
-      "eu-west-2 prod-availability           False 10/20/2023 1:11:55 PM   3886095 2619 MB  ACTIVE\n",
-      "eu-west-2 prod-bookability            False 10/20/2023 1:11:55 PM 117212965 31114 MB ACTIVE\n",
-      "eu-west-2 prod-novasol_currencies     False 2/2/2023 4:43:28 PM          38 0 MB     ACTIVE\n",
-      "eu-west-2 prod-novasol_product_cache  False 10/20/2023 1:11:55 PM    213460 195 MB   ACTIVE\n",
-      "eu-west-2 terraform-locks              True 7/8/2022 6:20:39 PM          89 0 MB     ACTIVE\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "$ddbTables  = @()\n",
-    "$ddbTableList   = @()\n",
-    "$Regions | ForEach-Object   {\n",
-    "\n",
-    "    $ddbTableList   = Get-DDBTableList -ProfileName $Profiles.ProfileName -Region $_\n",
-    "    $ddbBackupList  = Get-DDBBackupList -ProfileName $Profiles.ProfileName -Region $_\n",
-    "\n",
-    "    foreach ($ddbTable in $ddbTableList) {\n",
-    "        \n",
-    "        $Table = Get-DDBTable -TableName $ddbTable -ProfileName $Profiles.ProfileName -Region $_\n",
-    "\n",
-    "        if ($ddbBackupList) {\n",
-    "            \n",
-    "            $BackupAvailable = $ddbBackupList.TableName.Contains(\"$($Table.TableName)\")\n",
-    "        }\n",
-    "        else {\n",
-    "\n",
-    "            $BackupAvailable = $false\n",
-    "        }\n",
-    "        \n",
-    "\n",
-    "        $Sum = [PSCustomObject]@{\n",
-    "\n",
-    "            Region              = $_\n",
-    "            TableName           = $Table.TableName\n",
-    "            Backup              = $BackupAvailable\n",
-    "            CreationDateTime    = $Table.CreationDateTime\n",
-    "            ItemCount           = $Table.ItemCount\n",
-    "            # TableSizeBytes      = $Table.TableSizeBytes\n",
-    "            SizeMB         = \"$([math]::round($($Table.TableSizeBytes /1MB), 0)) MB\"\n",
-    "            Status         = $Table.TableStatus\n",
-    "            # TableId             = $Table.TableId\n",
-    "            # KeySchema           = $Table.KeySchema\n",
-    "            # GlobalSecondaryIndexes = $Table.GlobalSecondaryIndexes\n",
-    "            \n",
-    "        }\n",
-    "        $ddbTables += $Sum\n",
-    "    }\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "}\n",
+    "$ddbTables = Get-DoDDBTableInformation $Profiles $Regions \n",
     "$ddbTables | Format-Table -AutoSize"
    ]
   },
@@ -221,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -230,31 +98,16 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
-      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
-      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP  7/12/2024 11:30:17 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP2 7/12/2024 11:36:29 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP3 7/13/2024 7:19:00 PM   AVAILABLE\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "$BackupsList    = Get-DDBBackupList -ProfileName $Profiles.ProfileName \n",
-    "$Columns      = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
+    "$Columns        = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
     "$BackupsList | Select-Object -Property $Columns | Format-Table -AutoSize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -263,32 +116,15 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mCREATING\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "$Backup = New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP3'\n",
-    "$Backup"
+    "# $Backup = New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP4'\n",
+    "# $Backup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -297,24 +133,7 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
-      "                         p/01720898340596-1b567bd3\n",
-      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/13/2024 7:19:00 PM\n",
-      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
-      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations_BACKUP3\n",
-      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
-      "\u001b[32;1mBackupStatus           : \u001b[0mAVAILABLE\n",
-      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "$Bk = Get-DDBBackup -BackupArn $Backup.BackupArn -ProfileName DevOps-Apex-PROD\n",
     "$Bk.BackupDetails"
