--- a/DBReview/1. Summary.ipynb
+++ b/DBReview/1. Summary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -45,10 +45,7 @@
     }
    ],
    "source": [
-    "Remove-Module DevOpsToolkit\n",
-    "Import-Module AWS.Tools.Common\n",
-    "Import-Module AWS.Tools.DynamoDBv2\n",
-    "Import-Module AWS.Tools.RDS\n",
+    "Import-Module AWS.Tools.Common, AWS.Tools.DynamoDBv2, AWS.Tools.RDS\n",
     "Import-Module '/Users/conrad.gauntlett/WorkArea/Repos/DBA_MISC/PowerShell/Modules/DevOpsToolkit'\n",
     "\n",
     "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -like 'DevOps*' }\n",
@@ -57,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
